test/classes/errors/nilability-assign/assign-oknil-owned-from-nonnil-unmanaged.good
assign-oknil-owned-from-nonnil-unmanaged.chpl:8: error: Cannot assign to owned MyClass? from unmanaged MyClass
